Clean up the run and test scripts
Use consistent variable names and command arguments in the run and test
scripts, and use absolute paths for the file variables.